welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:-6: error: type mismatch;
 found   : Unit
 required: Boolean
			if (haveBaggle()) 
                                      ^Program:10: error: reassignment to val
			nbpas=nbpas+1
                             ^