welcome.lessons.welcome.methods.returning.MethodsReturning.scala.code
def haveBaggle(){
	var nbpas =0
	var vuBiscuit=0
	
	for(nbpas<-1 to 6)
	{
		while(!estSurBiscuit)
		{ 
			avance()
			nbpas=nbpas+1
		}
	}
}
